Package: aroma.core
===================

Version: 2.7.1 [2012-11-26]
o Lowered the package dependencies to aroma.light (>= 1.22.0)
  such that this package can be installed easily on R (>= 2.14.0).


Version: 2.7.0 [2012-11-24]
o Bumped version for CRAN submission.
o Bumped up package dependencies.
o No updates.
o Package passes all redundancy tests.


Version: 2.6.16 [2012-11-21]
o Now getParametersAsString() handles sets of parameters as well.
o Added getParameterSets() to ParametersInterface.


Version: 2.6.15 [2012-11-21]
o Added ParametersInterface.
o DOCUMENTATION: Hiding more internal methods from the help indices.


Version: 2.6.14 [2012-11-18]
o CLEANUP: Dropped getHeaderParameters() for TextUnitNamesFile, which
  is now done by getHeader() of TabularTextFile.
o CLEANUP: Now using getName() instead of deprecated getLabel().
o CLEANUP: Package only depends on digest indirectly via R.cache.
o CLEANUP: Moved internal .assertDigest() to R.cache.


Version: 2.6.13 [2012-11-13]
o CLEANUP: Properly declared all cached fields, making it possible
  to remove nearly all clearCache() implementations because the one
  for Object takes does the job.
o CLEANUP: The RSP template for ChromosomeExplorer's setupExplorer.js
  had a duplicated entry.


Version: 2.6.12 [2012-11-12]
o CLEANUP: Now seq_along(x) instead of seq(along=x) everywhere.
  Similarly, seq(ds) where 'ds' is GenericDataFileSet is now
  replaced by seq_along(ds).  Likewise, seq_len(x) replaces 
  seq(length=x), and length(ds) replaces nbrOfFiles(ds).


Version: 2.6.11 [2012-11-08]
o Renamed getColumnNames() to getDefaultColumnNames() for all
  classes inheriting from GenericTabularFile, because of the
  new ColumnNamesInterface interface.
o CRAN POLICY: Made a few of the examples faster.  Also made
  some of the system tests faster.


Version: 2.6.10 [2012-11-05]
o CLEANUP: Replaced all whichVector() with which(), because the
  latter is now the fastest again.


Version: 2.6.9 [2012-10-31]