@@ -4,6 +4,8 @@ Package: aroma.core
 Version: 2.7.1 [2012-11-26]
 o Lowered the package dependencies to aroma.light (>= 1.22.0)
   such that this package can be installed easily on R (>= 2.14.0).
+o BUG FIX: getRam() and setRam() for AromaSettings did not use
+  'memory/ram'.
 
 
 Version: 2.7.0 [2012-11-24]
